--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       }
     </style>
     <div id="app">
-      <div class="container">
+      <div v-if="token" class="container">
         <div class="row py-3">
           <div class="col-md-6">
             <h2>產品列表</h2>
@@ -107,74 +107,128 @@
           </div>
         </div>
       </div>
+      <!-- 登入前 -->
+      <div v-else class="container">
+        <div class="row justify-content-center">
+          <h1 class="h3 my-3 font-weight-normal text-center">請先登入</h1>
+          <div class="col-8">
+            <form id="form" class="form-signin">
+              <div class="form-floating mb-3">
+                <input
+                  v-model="username"
+                  type="email"
+                  class="form-control"
+                  id="username"
+                  placeholder="name@example.com"
+                  required
+                  autofocus
+                />
+                <label for="username">Email address</label>
+              </div>
+              <div class="form-floating">
+                <input
+                  v-model="password"
+                  type="password"
+                  class="form-control"
+                  id="password"
+                  placeholder="Password"
+                  required
+                />
+                <label for="password">Password</label>
+              </div>
+              <button
+                @click.prevent="login"
+                class="btn btn-lg btn-primary w-100 mt-3"
+                type="submit"
+              >
+                登入
+              </button>
+            </form>
+          </div>
+        </div>
+        <p class="mt-5 mb-3 text-muted text-center">&copy; 2021~∞ - 六角學院</p>
+      </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.9.1/axios.min.js"
+      integrity="sha512-Xk3wWei2TGrsh9kDSBKUMIjw/86sLUvhtnv9f7fOuIwhhiUTKz8szkWkzHthrM5Bb3Bu9idSzkxOrkzhcneuiw=="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+      integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      crossorigin="anonymous"
+    ></script>
     <script type="module">
       import { createApp } from "https://unpkg.com/vue@3/dist/vue.esm-browser.js";
+
+      const url = "https://ec-course-api.hexschool.io/v2";
+      const path = "ming777";
 
       const app = {
         data() {
           return {
+            token: "",
+            username: "",
+            password: "",
             currentProduct: {},
-            // 產品資料格式
-            products: [
-              {
-                category: "甜甜圈",
-                content: "尺寸：14x14cm",
-                description:
-                  "濃郁的草莓風味，中心填入滑順不膩口的卡士達內餡，帶來滿滿幸福感！",
-                id: "-L9tH8jxVb2Ka_DYPwng",
-                is_enabled: 1,
-                origin_price: 150,
-                price: 99,
-                title: "草莓莓果夾心圈",
-                unit: "個",
-                num: 10,
-                imageUrl:
-                  "https://images.unsplash.com/photo-1583182332473-b31ba08929c8?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NzR8fGRvbnV0fGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60",
-                imagesUrl: [
-                  "https://images.unsplash.com/photo-1626094309830-abbb0c99da4a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2832&q=80",
-                  "https://images.unsplash.com/photo-1559656914-a30970c1affd?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTY0fHxkb251dHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60",
-                ],
-              },
-              {
-                category: "蛋糕",
-                content: "尺寸：6寸",
-                description:
-                  "蜜蜂蜜蛋糕，夾層夾上酸酸甜甜的檸檬餡，清爽可口的滋味讓人口水直流！",
-                id: "-McJ-VvcwfN1_Ye_NtVA",
-                is_enabled: 0,
-                origin_price: 1000,
-                price: 900,
-                title: "蜂蜜檸檬蛋糕",
-                unit: "個",
-                num: 1,
-                imageUrl:
-                  "https://images.unsplash.com/photo-1627834377411-8da5f4f09de8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1001&q=80",
-                imagesUrl: [
-                  "https://images.unsplash.com/photo-1618888007540-2bdead974bbb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=987&q=80",
-                ],
-              },
-              {
-                category: "蛋糕",
-                content: "尺寸：6寸",
-                description: "法式煎薄餅加上濃郁可可醬，呈現經典的美味及口感。",
-                id: "-McJ-VyqaFlLzUMmpPpm",
-                is_enabled: 1,
-                origin_price: 700,
-                price: 600,
-                title: "暗黑千層",
-                unit: "個",
-                num: 15,
-                imageUrl:
-                  "https://images.unsplash.com/photo-1505253149613-112d21d9f6a9?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDZ8fGNha2V8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60",
-                imagesUrl: [
-                  "https://images.unsplash.com/flagged/photo-1557234985-425e10c9d7f1?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTA5fHxjYWtlfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60",
-                  "https://images.unsplash.com/photo-1540337706094-da10342c93d8?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDR8fGNha2V8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60",
-                ],
-              },
-            ],
+            products: [],
           };
+        },
+        methods: {
+          login() {
+            const userInfo = {
+              username: username.value,
+              password: password.value,
+            };
+
+            axios
+              .post(`${url}/admin/signin`, userInfo)
+              .then((res) => {
+                const { token, expired } = res.data;
+                document.cookie = `hexToken= ${token}; expires=${new Date(
+                  expired
+                )};`;
+                this.checkLogin();
+              })
+              .catch((err) => {
+                console.log(err);
+              });
+          },
+          checkLogin() {
+            this.token = document.cookie.replace(
+              /(?:(?:^|.*;\s*)hexToken\s*\=\s*([^;]*).*$)|^.*$/,
+              "$1"
+            );
+            axios.defaults.headers.common["Authorization"] = this.token;
+
+            axios
+              .post(`${url}/api/user/check`)
+              .then((res) => {
+                this.getAllProduct();
+              })
+              .catch((err) => {
+                console.log(err);
+              });
+          },
+          getAllProduct() {
+            axios
+              .get(`${url}/api/${path}/admin/products`)
+              .then((res) => {
+                this.products = res.data.products;
+                // 使用 all API, 取得 products
+                // Object.values(res.data.products).forEach((item) => {
+                //   this.products.push(item);
+                // });
+              })
+              .catch((err) => {
+                console.log(err);
+              });
+          },
         },
       };
 
