--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                         min="0"
                         class="form-control"
                         placeholder="請輸入原價"
-                        v-model="currentProduct.origin_price"
+                        v-model.number="currentProduct.origin_price"
                       />
                     </div>
                     <div class="mb-3 col-md-6">
@@ -293,7 +293,7 @@
                         min="0"
                         class="form-control"
                         placeholder="請輸入售價"
-                        v-model="currentProduct.price"
+                        v-model.number="currentProduct.price"
                       />
                     </div>
                   </div>
@@ -431,7 +431,8 @@
             </div>
             <div class="modal-body">
               是否刪除
-              <strong class="text-danger"></strong> 商品(刪除後將無法恢復)。
+              <strong class="text-danger">{{ currentProduct.title }}</strong>
+              商品(刪除後將無法恢復)。
             </div>
             <div class="modal-footer">
               <button
@@ -514,7 +515,7 @@
                 }, 1500);
               })
               .catch((err) => {
-                this.setSweetMessageError(err.response.data.message);
+                this.setSweetMessageError(err.data.message);
                 Swal.fire(sweetMessage);
               });
           },
@@ -524,15 +525,17 @@
               "$1"
             );
             axios.defaults.headers.common["Authorization"] = this.token;
-            axios
-              .post(`${url}/api/user/check`)
-              .then(() => {
-                this.getAllProduct();
-              })
-              .catch((err) => {
-                this.setSweetMessageError(err.response.data.message);
-                Swal.fire(sweetMessage);
-              });
+            if (this.token) {
+              axios
+                .post(`${url}/api/user/check`)
+                .then(() => {
+                  this.getAllProduct();
+                })
+                .catch((err) => {
+                  this.setSweetMessageError(err.data.message);
+                  Swal.fire(sweetMessage);
+                });
+            }
           },
           getAllProduct() {
             axios
@@ -545,7 +548,7 @@
                 // });
               })
               .catch((err) => {
-                this.setSweetMessageError(err.response.data.message);
+                this.setSweetMessageError(err.data.message);
                 Swal.fire(sweetMessage);
               });
           },
@@ -565,7 +568,7 @@
                 }, 1500);
               })
               .catch((err) => {
-                this.setSweetMessageError(err.response.data.message);
+                this.setSweetMessageError(err.data.message);
                 Swal.fire(sweetMessage);
               });
           },
@@ -588,7 +591,7 @@
                 }, 1500);
               })
               .catch((err) => {
-                this.setSweetMessageError(err.response.data.message);
+                this.setSweetMessageError(err.data.message);
                 Swal.fire(sweetMessage);
               });
           },
@@ -606,7 +609,7 @@
                 }, 1500);
               })
               .catch((err) => {
-                this.setSweetMessageError(err.response.data.message);
+                this.setSweetMessageError(err.data.message);
                 Swal.fire(sweetMessage);
               });
           },
